--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,8 @@ automodel = [
     "mamba-ssm",
     "causal-conv1d",
     "grouped_gemm @ git+https://github.com/fanshiqing/grouped_gemm@v1.1.4",
+    "transformer-engine[pytorch]==2.8.0",
+    "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@bfded34800dfec415b71503f8205181de90b2480",
 ]
 vllm = [
     "cuda-python",
@@ -72,7 +74,7 @@ vllm = [
     # deep_ep also needs libibverbs-dev
     # sudo apt-get update
     # sudo apt-get install libibverbs-dev
-    "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@e3908bf5bd0cc6265bcb225d15cd8c996d4759ef",
+    "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@bfded34800dfec415b71503f8205181de90b2480",
     "vllm==0.11.0",
     "num2words>=0.5.14",
     # Remove this once https://github.com/NVIDIA-NeMo/RL/issues/501 resolved
@@ -221,18 +223,26 @@ requires-dist = ["torch", "einops", "setuptools", "psutil", "ninja"]
 
 [[tool.uv.dependency-metadata]]
 name = "causal-conv1d"
+# This version has to match the version in the commit/rev/tag used
+version = "1.5.0.post8"
 requires-dist = ["torch", "packaging", "ninja"]
 
 [[tool.uv.dependency-metadata]]
 name = "mamba-ssm"
+# This version has to match the version in the commit/rev/tag used
+version = "2.2.4"
 requires-dist = ["torch", "packaging", "ninja", "causal-conv1d"]
 
 [[tool.uv.dependency-metadata]]
 name = "deep_ep"
+# This version has to match the version in the commit/rev/tag used
+version = "v1.2.1+bfded34"
 requires-dist = ["torch", "packaging", "ninja"]
 
 [[tool.uv.dependency-metadata]]
 name = "deep_gemm"
+# This version has to match the version in the commit/rev/tag used
+version = "v2.0.0+7b6b556"
 requires-dist = ["torch", "packaging", "ninja"]
 
 [tool.black]
