--- a/examples/configs/recipes/llm/sft-nemotron-super-49b-tulu-v3.yaml
+++ b/examples/configs/recipes/llm/sft-nemotron-super-49b-tulu-v3.yaml
@@ -1,49 +1,60 @@
-defaults: ../../sft_nemotron_super_49b_base.yaml
-
-# SFT on Tulu3-SFT-Mixture dataset
+defaults: ../../sft.yaml
 sft:
   max_num_steps: 50
   val_period: 5
-
+  val_global_batch_size: 128
+checkpointing:
+  checkpoint_dir: results/sft_nemotron_super_49b
+  metric_name: val_loss
+  keep_top_k: 100
+  save_period: 500
 policy:
+  model_name: /lustre/fsw/portfolios/coreai/users/joyang/models/llama-3_3-nemotron-49b-instruct-128k-v1_2-hf
   max_total_sequence_length: 32768
-  train_micro_batch_size: 1
-
+  train_global_batch_size: 128
   dtensor_cfg:
+    _v2: true
+    activation_checkpointing: true
     context_parallel_size: 8
-
+    tensor_parallel_size: 4
+    custom_parallel_plan: examples.custom_parallel.llama_nemotron_super_49b_custom_plan.custom_parallel_plan
+  dynamic_batching:
+    train_mb_tokens: 4096
+    logprob_mb_tokens: 8192
+  make_sequence_length_divisible_by: ${max:${mul:${policy.dtensor_cfg.context_parallel_size},
+    2}, ${policy.max_total_sequence_length}}
+  max_grad_norm: null
   optimizer:
     kwargs:
-      lr: 1e-5
-
+      lr: 1.0e-05
+      weight_decay: 0.01
+      eps: 1.0e-08
   scheduler:
-    - name: "torch.optim.lr_scheduler.LinearLR"
-      kwargs:
-        start_factor: 0.1
-        end_factor: 1.0
-        total_iters: 10 # warmup_steps
-    - name: "torch.optim.lr_scheduler.CosineAnnealingLR"
-      kwargs:
-        # max_num_steps - warmup_steps = cosine steps
-        T_max: 40
-        eta_min: 2e-6
-    - milestones: [10]
-
+  - name: torch.optim.lr_scheduler.LinearLR
+    kwargs:
+      start_factor: 0.1
+      end_factor: 1.0
+      total_iters: 10
+  - name: torch.optim.lr_scheduler.CosineAnnealingLR
+    kwargs:
+      T_max: 40
+      eta_min: 2.0e-06
+  - milestones:
+    - 10
 data:
-  dataset_name: "tulu3_sft_mixture"
+  dataset_name: tulu3_sft_mixture
   test_size: 0.05
-  # max_samples: 10000 # remove this line to use all data
-
+  num_workers: 20
 logger:
-  monitor_gpus: true
+  tensorboard_enabled: false
+  num_val_samples_to_print: 0
   wandb:
-    project: "nemotron-tulu-3-sft"
-    name: "nemotron-tulu-3"
+    project: nemotron-tulu-3-sft
+    name: nemotron-tulu-3
   tensorboard:
-    log_dir: "tb_logs-nemotron-tulu-3-sft"
+    log_dir: tb_logs-nemotron-tulu-3-sft
   mlflow:
-    experiment_name: "nemotron-tulu-3-sft"
-    run_name: "nemotron-tulu-3-sft"
-
+    experiment_name: nemotron-tulu-3-sft
+    run_name: nemotron-tulu-3-sft
 cluster:
-  num_nodes: 8
+  gpus_per_node: 8
