--- a/examples/configs/grpo_rm_1B.yaml
+++ b/examples/configs/grpo_rm_1B.yaml
@@ -2,8 +2,11 @@
 defaults: "grpo_math_1B.yaml"
 
 env:
+  math:
+    enabled: false
   reward_model:  
     enabled: true
+    processor: "math_hf_data_processor"
     model_name: "Skywork/Skywork-Reward-V2-Qwen3-0.6B"
     tokenizer:
       name: ${env.reward_model.model_name}
@@ -11,6 +14,7 @@ env:
     batch_size: ${policy.train_micro_batch_size}
     checkpoint_path: null
     max_model_len: 2048
+    offload_optimizer_for_logprob: false
     resources:
       gpus_per_node: 1
       num_nodes: 1
