--- a/examples/configs/recipes/llm/sft-nemotron-super-49b-tulu-v3.yaml
+++ b/examples/configs/recipes/llm/sft-nemotron-super-49b-tulu-v3.yaml
@@ -3,11 +3,13 @@ sft:
   max_num_steps: 50
   val_period: 5
   val_global_batch_size: 128
+
 checkpointing:
   checkpoint_dir: results/sft_nemotron_super_49b
-  metric_name: val_loss
+  metric_name: val:loss
   keep_top_k: 100
   save_period: 500
+
 policy:
   model_name: /lustre/fsw/portfolios/coreai/users/joyang/models/llama-3_3-nemotron-49b-instruct-128k-v1_2-hf
   max_total_sequence_length: 32768
@@ -43,10 +45,11 @@ policy:
     - 10
 data:
   dataset_name: tulu3_sft_mixture
-  test_size: 0.05
   num_workers: 20
+  test_size: 0.05
 logger:
   tensorboard_enabled: false
+  monitor_gpus: false
   num_val_samples_to_print: 0
   wandb:
     project: nemotron-tulu-3-sft
@@ -58,3 +61,4 @@ logger:
     run_name: nemotron-tulu-3-sft
 cluster:
   gpus_per_node: 8
+  num_nodes: 8
