--- a/pyrefly.toml
+++ b/pyrefly.toml
@@ -34,6 +34,8 @@ project-includes = [
   "docs/helpers.py",
   "examples/converters/convert_dcp_to_hf.py",
   "examples/converters/convert_megatron_to_hf.py",
+  "examples/custom_parallel/custom_parallel.py",
+  "examples/custom_parallel/llama_nemotron_super_49b_custom_plan.py",
   "nemo_rl/algorithms/__init__.py",
   "nemo_rl/algorithms/interfaces.py",
   "nemo_rl/algorithms/utils.py",
@@ -62,9 +64,11 @@ project-includes = [
   "nemo_rl/data/datasets/response_datasets/oai_format_dataset.py",
   "nemo_rl/data/datasets/response_datasets/oasst.py",
   "nemo_rl/data/datasets/response_datasets/openmathinstruct2.py",
+  "nemo_rl/data/datasets/response_datasets/helpsteer3.py",
   "nemo_rl/data/datasets/response_datasets/refcoco.py",
   "nemo_rl/data/datasets/response_datasets/response_dataset.py",
   "nemo_rl/data/datasets/response_datasets/squad.py",
+  "nemo_rl/data/datasets/response_datasets/tulu3.py",
   "nemo_rl/data/datasets/utils.py",
   "nemo_rl/data/interfaces.py",
   "nemo_rl/data/multimodal_utils.py",
@@ -78,6 +82,7 @@ project-includes = [
   "nemo_rl/distributed/worker_group_utils.py",
   "nemo_rl/environments/__init__.py",
   "nemo_rl/environments/games/sliding_puzzle.py",
+  "nemo_rl/environments/code_jaccard_environment.py",
   "nemo_rl/environments/interfaces.py",
   "nemo_rl/environments/math_environment.py",
   "nemo_rl/environments/metrics.py",
