Enhance dataset handling by introducing RawDataset class and updating processors. Added raw_dataset.py and path.py for improved dataset processing. Updated project-includes in pyrefly.toml and modified grpo.md to reflect new task-dataset mapping. Cleaned up unused code and configurations in various YAML files.
Signed-off-by: ruit <ruit@nvidia.com>

--- a/examples/configs/grpo_math_1B.yaml
+++ b/examples/configs/grpo_math_1B.yaml
@@ -247,7 +247,8 @@ data:
   system_prompt_file: null
   shuffle: true
   num_workers: 1
-
+  processor: "math_hf_data_processor"
+  env_name: "math"
   dataset_name: "OpenMathInstruct-2"
   # You can use custom response datasets for training and validation. For example:
   #   data:
@@ -262,10 +263,8 @@ data:
 
 env:
   math:
-    enabled: true
     num_workers: 8
     math_verify_impl: "hf_math_verify"
-    processor: "math_hf_data_processor"
 
 logger:
   log_dir: "logs"  # Base directory for all logs
