--- a/pyrefly.toml
+++ b/pyrefly.toml
@@ -57,6 +57,7 @@ project-includes = [
   "nemo_rl/data/datasets/preference_datasets/preference_dataset.py",
   "nemo_rl/data/datasets/preference_datasets/tulu3.py",
   "nemo_rl/data/datasets/processed_dataset.py",
+  "nemo_rl/data/datasets/raw_dataset.py",
   "nemo_rl/data/datasets/response_datasets/__init__.py",
   "nemo_rl/data/datasets/response_datasets/clevr.py",
   "nemo_rl/data/datasets/response_datasets/deepscaler.py",
@@ -116,6 +117,7 @@ project-includes = [
   "nemo_rl/utils/nsys.py",
   "nemo_rl/utils/nvml.py",
   "nemo_rl/utils/packed_tensor.py",
+  "nemo_rl/utils/path.py",
   "nemo_rl/utils/prefetch_venvs.py",
   "nemo_rl/utils/timer.py",
   "nemo_rl/utils/venvs.py",
