Update environment configuration in YAML files and adjust dataset setup for vlm grpo
- Added `env_name` to `vlm_grpo_3B_megatron.yaml` and `vlm_grpo_3B.yaml` for environment specification.
- Modified `setup_data` function in `run_vlm_grpo.py` to use `env_name` for environment configuration, enhancing flexibility in dataset processing.

Signed-off-by: ruit <ruit@nvidia.com>

--- a/examples/configs/vlm_grpo_3B.yaml
+++ b/examples/configs/vlm_grpo_3B.yaml
@@ -228,6 +228,7 @@ data:
   prompt_file: "examples/prompts/clevr_cogent_cot.txt"
   system_prompt_file: null
   dataset_name: "clevr-cogent"
+  env_name: "clevr-cogent"
   split: "trainA"
   shuffle: true
   num_workers: 1
