--- a/examples/configs/recipes/llm/sft-gpt-oss-20b-1n8g-fsdp8ep8-automodel.yaml
+++ b/examples/configs/recipes/llm/sft-gpt-oss-20b-1n8g-fsdp8ep8-automodel.yaml
@@ -25,3 +25,7 @@ policy:
       master_weights: true
       exp_avg_dtype: bfloat16
       exp_avg_sq_dtype: bfloat16
+checkpointing:
+  enabled: true
+  checkpoint_dir: "results/sft-gpt-oss-20b-1n8g-fsdp8ep8-automodel"
+  save_period: 10
