--- a/examples/configs/recipes/llm/sft-gpt-oss-20b-1n8g-fsdp8ep8-automodel.yaml
+++ b/examples/configs/recipes/llm/sft-gpt-oss-20b-1n8g-fsdp8ep8-automodel.yaml
@@ -26,6 +26,4 @@ policy:
       exp_avg_dtype: bfloat16
       exp_avg_sq_dtype: bfloat16
 checkpointing:
-  enabled: true
-  checkpoint_dir: "results/sft-gpt-oss-20b-1n8g-fsdp8ep8-automodel"
-  save_period: 10
+  checkpoint_dir: results/sft-gpt-oss-20b-1n8g-fsdp8ep8-automodel
