--- a/examples/configs/recipes/llm/grpo-helpsteer3-llama-3.3-nemotron-super-49b-v1.5-4n8g-fsdp2tp8.yaml
+++ b/examples/configs/recipes/llm/grpo-helpsteer3-llama-3.3-nemotron-super-49b-v1.5-4n8g-fsdp2tp8.yaml
@@ -6,7 +6,9 @@ checkpointing:
   checkpoint_dir: results/grpo-helpsteer3-llama-3.3-nemotron-super-49b-v1.5
   metric_name: val:reward
 policy:
-  model_name: /lustre/fsw/portfolios/coreai/users/joyang/models/llama-3_3-nemotron-49b-instruct-128k-v1_2-hf
+  # This is the model name is unusable because the model did bot update on huggingface yet.
+  # ISSUE: https://github.com/NVIDIA-NeMo/RL/issues/1571
+  model_name: nvidia/Llama-3_3-Nemotron-Super-49B-v1_5 
   max_total_sequence_length: 32768
   train_global_batch_size: 64
   train_micro_batch_size: 1
@@ -40,6 +42,8 @@ policy:
     vllm_cfg:
       tensor_parallel_size: 4
 data:
+  # Training with HelpSteer3 will lead to high logprob error.
+  # ISSUE: https://github.com/NVIDIA-NeMo/RL/issues/1570
   prompt_file: null
   dataset_name: HelpSteer3
   split: preference
