--- a/pyproject.toml
+++ b/pyproject.toml
@@ -213,9 +213,13 @@ default-groups = ["dev", "build"]
 link-mode = "copy"
 # The TE override is needed because automodel/mbridge we are on is still on 2.5.0
 # The opencv-python-headless override is needed because automodel pins it to 4.10.0.84, whereas vllm>=0.11.0 needs >= 4.11.0
+# The transformers override is needed since automodel is still on <=4.55.4
+# The timm override is needed because current automodel pins to 1.0.16. This can be removed once we move ToT automodel
 override-dependencies = [
   "transformer-engine[pytorch]==2.8.0",
   "opencv-python-headless>=4.11.0",
+  "transformers>=4.57.1",
+  "timm<=1.0.22",
 ]
 
 # Augment build dependencies for packages that need torch at build time
